--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1> World Bank Dashboard</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aliquam quo repudiandae, amet mollitia unde quis quasi autem, sint quas, praesentium possimus. Minus possimus in architecto quia et, sint repudiandae.</p>
 </body>
 </html>
