--- a/index.html
+++ b/index.html
@@ -1,12 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   
-   
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <title>World Bank Dashboard</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-dark pb-2 pt-2 mb-5">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">World Bank Dashboard</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="btn btn-outline-success nav-link text-white"
+                aria-current="page"
+                href="population_map.html"
+                >Population Map</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2>
+            A Decade-by-Decade Look at World Countries Population (2002-2022)
+          </h2>
+
+          <select
+            id="selectCountryPopn"
+            style="
+              height: 35px;
+              border: 2px dashed green;
+              outline: 0;
+              width: 100%;
+            "
+          ></select>
+        </div>
+        <div class="col-12">
+          <figure class="highcharts-figure">
+            <div id="container"></div>
+          </figure>
+        </div>
+
+        <div class="col-4">
+          <select
+            id="country-1"
+            style="
+              height: 35px;
+              border: 2px dashed rgb(91, 177, 25);
+              outline: 0;
+              background-color: rgb(44, 175, 254);
+              color: aliceblue;
+            "
+          ></select>
+        </div>
+        <div class="col-4">
+          <select
+            id="country-2"
+            style="
+              height: 35px;
+              border: 2px dashed rgb(0, 34, 128);
+              outline: 0;
+              background-color: rgb(103, 28, 215);
+              color: aliceblue;
+            "
+          ></select>
+        </div>
+
+        <div class="col-4">
+          <button class="btn btn-group-lg btn-warning" id="compareBtn">
+            compare
+          </button>
+        </div>
+
+        <div class="col-12">
+          <div id="container-compare"></div>
+
+          <script src="https://code.highcharts.com/highcharts.js"></script>
+          <script src="https://code.highcharts.com/modules/exporting.js"></script>
+          <script src="https://code.highcharts.com/modules/export-data.js"></script>
+          <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+        </div>
+        <div class="col-6">
+          <div id="containerGdp"></div>
+
+          <script src="https://code.highcharts.com/highcharts.js"></script>
+          <script src="https://code.highcharts.com/modules/data.js"></script>
+          <script src="https://code.highcharts.com/modules/drilldown.js"></script>
+          <script src="https://code.highcharts.com/modules/exporting.js"></script>
+          <script src="https://code.highcharts.com/modules/export-data.js"></script>
+          <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+        </div>
+      </div>
+    </div>
+
+    <script src="dashb.js"></script>
+    <script src="countries.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-3d.js"></script>
+    <script src="https://code.highcharts.com/modules/cylinder.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+  </body>
 </html>
