--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="col-4">
           <button class="btn btn-group-lg btn-warning" id="compareBtn">
-            compare
+            COMPARE
           </button>
         </div>
 
